--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,6 +1,31 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title></title>
+		<meta charset="utf-8" />
+		<title>Talkup</title>
+		<link rel="stylesheet" href="css/style.css" type="text/css" />
 	</head>
+	<body>
+		<div id="container">
+			<header>
+				<h1>Talkup! Talkbox</h1>
+			</header>
+			<div id="Takls">
+				<ul>
+					<li class="Talk"><span>11:11am - </span>Marziye: Hallo! Wie gehts? </li>
+					<li class="Talk"><span>11:11am - </span>Marziye: Hallo! Wie gehts? </li>
+					<li class="Talk"><span>11:11am - </span>Marziye: Hallo! Wie gehts? </li>
+					<li class="Talk"><span>11:11am - </span>Marziye: Hallo! Wie gehts? </li>
+					<li class="Talk"><span>11:11am - </span>Marziye: Hallo! Wie gehts? </li>
+				</ul>
+			</div>
+			<div id="input">
+				<form method="post" action="process.php>
+				<!-- The 'action' attribute in a web form specifies the URL 
+				to which the form data is sent when the form is submitted. -->
+			
+				</form>
+			</div>
+		</div>
+	</body>
 </html>
